[tool.poetry]
name = "meye"
version = "0.1.0"
description = ""
authors = ["Pho Hale <PhoHale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11" # ">=3.10,<3.12"
tensorflow-io-gcs-filesystem = "0.27.0"
imageio = "^2.35.1"
imageio-ffmpeg = "^0.5.1"
scipy = "^1.0"
tqdm = "^4.66.5"
numpy = "^1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"
opencv-python-headless = "^4.0"
ipykernel = "^6.29.5"
tensorflow = "~2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
